# CodeViz-New

./: .gitignore  README.md  check_version.py  models.txt  output.txt  output_final.txt  reproduce_issue.py  test_cleanup.py  test_llm_hang.py  test_stream_clean.py  test_stream_context.py  test_stream_logic.py  validate_imports.py  verification_result.txt  verify_fix.py  verify_generation_config.py  verify_gpu_fix.py  verify_output.txt  verify_perf_and_fix.py  verify_repetition.py  verify_warnings.py
backend/: .env  .env.example  .gitignore  check_app_import.py  check_db_count.py  check_dependencies.py  check_import.py  debug_full_flow.py  debug_gen_fast.py  debug_imports.py  debug_llm.py  debug_llm_v2.py  debug_llm_v3.py  debug_load.py  debug_load_safe.py  debug_models.py  debug_output.txt  debug_stream.py  extract_visualizers.py  list_available_models.py  models.txt  models_list.txt  pyproject.toml  pyrightconfig.json  requirements.txt  seed_log.txt  seed_log_2.txt  seed_visualizers.py  setup_env.py  test_chat_mock.py  test_failover_mock.py  test_llm.py  test_priority_flow.py  test_rag.py  test_rag_content.py  test_streaming.py  verify_gpu.py  verify_phi35.py  verify_rag_retrieval.py
backend/app/: chat.py  config.py  execute.py  llm_service.py  main.py
backend/app/api/: chat.py  rag.py  smart_chat.py
backend/app/core/: code_extractor.py  config.py  hardcoded_visualizers.py  intent_detector.py  llm.py  rag_pipeline.py  visualizers.py  visualizers_advanced.py  visualizers_arrays.py  visualizers_graphs.py  (+3 more)
backend/chroma_db/: chroma.sqlite3
backend/rag/: loader.py
(+148 files in other folders)
