[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codelearn-ai-backend"
version = "1.0.0"
description = "AI-powered data structures learning platform backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "transformers>=4.46.0",
    "torch>=2.4.0",
    "accelerate>=0.34.0",
    "sentencepiece>=0.2.0",
    "langchain>=0.3.12",
    "chromadb>=0.5.15",
    "sentence-transformers>=2.7.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "numpy>=1.26.4",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
